--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"@types/three": "^0.174.0",
+		"three": "^0.174.0"
 	}
 }
